vendor/linux/x64/ftd2xx.h


/** @name FT_HANDLE 
 * An opaque value used as a handle to an opened FT device.
 */
typedef PVOID	FT_HANDLE;


/** @{
 * @name FT_STATUS 
 * @details Return status values for API calls. 
 */
typedef ULONG	FT_STATUS;


enum {
	FT_OK,
	FT_INVALID_HANDLE,
	FT_DEVICE_NOT_FOUND,
	FT_DEVICE_NOT_OPENED,
	FT_IO_ERROR,
	FT_INSUFFICIENT_RESOURCES,
	FT_INVALID_PARAMETER,
	FT_INVALID_BAUD_RATE,

	FT_DEVICE_NOT_OPENED_FOR_ERASE,
	FT_DEVICE_NOT_OPENED_FOR_WRITE,
	FT_FAILED_TO_WRITE_DEVICE,
	FT_EEPROM_READ_FAILED,
	FT_EEPROM_WRITE_FAILED,
	FT_EEPROM_ERASE_FAILED,
	FT_EEPROM_NOT_PRESENT,
	FT_EEPROM_NOT_PROGRAMMED,
	FT_INVALID_ARGS,
	FT_NOT_SUPPORTED,
	FT_OTHER_ERROR,
	FT_DEVICE_LIST_NOT_READY,
};


	/** @noop FT_SetResetPipeRetryCount
	 * @par Supported Operating Systems
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Set the ResetPipeRetryCount value.
	 * @param ftHandle Handle of the device.
	 * @param dwCount Unsigned long containing required ResetPipeRetryCount.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function is used to set the ResetPipeRetryCount. ResetPipeRetryCount controls the maximum
	 * number of times that the driver tries to reset a pipe on which an error has occurred.
	 * ResetPipeRequestRetryCount defaults to 50. It may be necessary to increase this value in noisy
	 * environments where a lot of USB errors occur.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetResetPipeRetryCount(
		FT_HANDLE ftHandle,
		DWORD dwCount
		);


	/** @noop FT_StopInTask
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Stops the driver's IN task.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function is used to put the driver's IN task (read) into a wait state. It can be used in situations
	 * where data is being received continuously, so that the device can be purged without more data being
	 * received. It is used together with FT_RestartInTask which sets the IN task running again.
	 * @see FT_RestartInTask
	 */
	FTD2XX_API FT_STATUS WINAPI FT_StopInTask(
		FT_HANDLE ftHandle
		);


	/** @noop FT_RestartInTask
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Restart the driver's IN task.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function is used to restart the driver's IN task (read) after it has been stopped by a call to
	 * FT_StopInTask.
	 * @see FT_StopInTask
	 */
	FTD2XX_API FT_STATUS WINAPI FT_RestartInTask(
		FT_HANDLE ftHandle
		);


	/** @noop FT_SetDeadmanTimeout
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * This function allows the maximum time in milliseconds that a USB request can remain outstanding to 
	 * be set.
	 * @param ftHandle Handle of the device.
	 * @param ulDeadmanTimeout Deadman timeout value in milliseconds. Default value is 5000.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * The deadman timeout is referred to in application note AN232B-10 Advanced Driver Options from the
	 * FTDI web site as the USB timeout. It is unlikely that this function will be required by most users.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetDeadmanTimeout(
		FT_HANDLE ftHandle,
		ULONG ulDeadmanTimeout
		);


	/** @noop FT_IoCtl
	 * Undocumented function.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_IoCtl(
		FT_HANDLE ftHandle,
		DWORD dwIoControlCode,
		LPVOID lpInBuf,
		DWORD nInBufSize,
		LPVOID lpOutBuf,
		DWORD nOutBufSize,
		LPDWORD lpBytesReturned,
		LPOVERLAPPED lpOverlapped
		);


	/** @noop FT_SetWaitMask
	 * Undocumented function.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetWaitMask(
		FT_HANDLE ftHandle,
		DWORD Mask
		);


	/** @noop FT_WaitOnMask
	 * Undocumented function.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_WaitOnMask(
		FT_HANDLE ftHandle,
		DWORD *Mask
		);


	/** @noop FT_GetEventStatus
	 * Undocumented function.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_GetEventStatus(
		FT_HANDLE ftHandle,
		DWORD *dwEventDWord
		);


/** @} */

/** @name EEPROM Programming Interface Functions
 * FTDI device EEPROMs can be both read and programmed using the functions listed in this section.
 * @n Please note the following information:
 * @li The Maximum length of the Manufacturer, ManufacturerId, Description and SerialNumber strings
 * is 48 words (1 word = 2 bytes).
 * @li The first two characters of the serial number are the manufacturer ID.
 * @li The Manufacturer string length plus the Description string length is less than or equal to 40
 * characters with the following functions: FT_EE_Read, FT_EE_Program, FT_EE_ProgramEx, 
 * FT_EEPROM_Read, FT_EEPROM_Program.
 * @li The serial number should be maximum 15 characters long on single port devices (eg FT232R, FT-X) 
 * and 14 characters on multi port devices (eg FT2232H, FT4232H). If it is longer then it may be
 * truncated and will not have a null terminator.

 * For instance a serial number which is 15 characters long on a multi-port device will have an 
 * effective serial number which is 16 characters long since the serial number is appended with the 
 * channel identifier (A,B,etc). The buffer used to return the string from the API is only 16 
 * characters in size so the NULL termination will be lost.
 * @n If the serial number or description are too long in the EEPROM or configuration of a device then the
 * strings returned by FT_GetDeviceInfo and FT_ListDevices may not be NULL terminated
 */
/** @{ */

	/** @noop FT_ReadEE
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Read a value from an EEPROM location.
	 * @param ftHandle Handle of the device.
	 * @param dwWordOffset EEPROM location to read from.
	 * @param lpwValue Pointer to the WORD value read from the EEPROM.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * EEPROMs for FTDI devices are organised by WORD, so each value returned is 16-bits wide.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_ReadEE(
		FT_HANDLE ftHandle,
		DWORD dwWordOffset,
		LPWORD lpwValue
		);


	/** @noop FT_WriteEE
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Write a value to an EEPROM location.
	 * @param ftHandle Handle of the device.
	 * @param dwWordOffset EEPROM location to read from.
	 * @param wValue The WORD value write to the EEPROM.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * EEPROMs for FTDI devices are organised by WORD, so each value written to the EEPROM is 
	 * 16-bits wide.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_WriteEE(
		FT_HANDLE ftHandle,
		DWORD dwWordOffset,
		WORD wValue
		);


	/** @noop FT_EraseEE
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Erases the device EEPROM.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function will erase the entire contents of an EEPROM, including the user area.
	 * Note that the FT232R	and FT245R devices have an internal EEPROM that cannot be erased.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_EraseEE(
		FT_HANDLE ftHandle
		);