src/bindings_linux_armv8.rs

unsafe extern "C" {
    #[doc = " @noop FT_SetResetPipeRetryCount\n @par Supported Operating Systems\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Set the ResetPipeRetryCount value.\n @param ftHandle Handle of the device.\n @param dwCount Unsigned long containing required ResetPipeRetryCount.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function is used to set the ResetPipeRetryCount. ResetPipeRetryCount controls the maximum\n number of times that the driver tries to reset a pipe on which an error has occurred.\n ResetPipeRequestRetryCount defaults to 50. It may be necessary to increase this value in noisy\n environments where a lot of USB errors occur."]
    pub fn FT_SetResetPipeRetryCount(ftHandle: FT_HANDLE, dwCount: DWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_StopInTask\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Stops the driver's IN task.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function is used to put the driver's IN task (read) into a wait state. It can be used in situations\n where data is being received continuously, so that the device can be purged without more data being\n received. It is used together with FT_RestartInTask which sets the IN task running again.\n @see FT_RestartInTask"]
    pub fn FT_StopInTask(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_RestartInTask\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Restart the driver's IN task.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function is used to restart the driver's IN task (read) after it has been stopped by a call to\n FT_StopInTask.\n @see FT_StopInTask"]
    pub fn FT_RestartInTask(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetDeadmanTimeout\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function allows the maximum time in milliseconds that a USB request can remain outstanding to\n be set.\n @param ftHandle Handle of the device.\n @param ulDeadmanTimeout Deadman timeout value in milliseconds. Default value is 5000.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n The deadman timeout is referred to in application note AN232B-10 Advanced Driver Options from the\n FTDI web site as the USB timeout. It is unlikely that this function will be required by most users."]
    pub fn FT_SetDeadmanTimeout(ftHandle: FT_HANDLE, ulDeadmanTimeout: ULONG) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_IoCtl\n Undocumented function."]
    pub fn FT_IoCtl(
        ftHandle: FT_HANDLE,
        dwIoControlCode: DWORD,
        lpInBuf: LPVOID,
        nInBufSize: DWORD,
        lpOutBuf: LPVOID,
        nOutBufSize: DWORD,
        lpBytesReturned: LPDWORD,
        lpOverlapped: LPOVERLAPPED,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetWaitMask\n Undocumented function."]
    pub fn FT_SetWaitMask(ftHandle: FT_HANDLE, Mask: DWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_WaitOnMask\n Undocumented function."]
    pub fn FT_WaitOnMask(ftHandle: FT_HANDLE, Mask: *mut DWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetEventStatus\n Undocumented function."]
    pub fn FT_GetEventStatus(ftHandle: FT_HANDLE, dwEventDWord: *mut DWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_ReadEE\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Read a value from an EEPROM location.\n @param ftHandle Handle of the device.\n @param dwWordOffset EEPROM location to read from.\n @param lpwValue Pointer to the WORD value read from the EEPROM.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n EEPROMs for FTDI devices are organised by WORD, so each value returned is 16-bits wide."]
    pub fn FT_ReadEE(ftHandle: FT_HANDLE, dwWordOffset: DWORD, lpwValue: LPWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_WriteEE\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Write a value to an EEPROM location.\n @param ftHandle Handle of the device.\n @param dwWordOffset EEPROM location to read from.\n @param wValue The WORD value write to the EEPROM.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n EEPROMs for FTDI devices are organised by WORD, so each value written to the EEPROM is\n 16-bits wide."]
    pub fn FT_WriteEE(ftHandle: FT_HANDLE, dwWordOffset: DWORD, wValue: WORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_EraseEE\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Erases the device EEPROM.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function will erase the entire contents of an EEPROM, including the user area.\n Note that the FT232R\tand FT245R devices have an internal EEPROM that cannot be erased."]
    pub fn FT_EraseEE(ftHandle: FT_HANDLE) -> FT_STATUS;
}
